// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skip Links Both skip links are displayed when passed 1`] = `
<div
  className="headerLinks umnHeaderSkipLinksWrapperDiv"
>
  <ul
    className="umnHeaderSkipLinksUl"
  >
    <li
      className="umnHeaderSkipLinksLi"
    >
      <a
        href="#foo"
      >
        Main navigation
      </a>
    </li>
    <li
      className="umnHeaderSkipLinksLi"
    >
      <a
        href="#bar"
      >
        Main content
      </a>
    </li>
  </ul>
</div>
`;

exports[`Skip Links Only main content skip links is it is only prop passed 1`] = `
<div
  className="headerLinks umnHeaderSkipLinksWrapperDiv"
>
  <ul
    className="umnHeaderSkipLinksUl"
  >
    <li
      className="umnHeaderSkipLinksLi"
    >
      <a
        href="#bar"
      >
        Main content
      </a>
    </li>
  </ul>
</div>
`;

exports[`Skip Links Only main nav skip links is it is only prop passed 1`] = `
<div
  className="headerLinks umnHeaderSkipLinksWrapperDiv"
>
  <ul
    className="umnHeaderSkipLinksUl"
  >
    <li
      className="umnHeaderSkipLinksLi"
    >
      <a
        href="#foo"
      >
        Main navigation
      </a>
    </li>
  </ul>
</div>
`;
